--- a/teacher/src/main/res/layout/list_item_lecture.xml
+++ b/teacher/src/main/res/layout/list_item_lecture.xml
@@ -22,13 +22,13 @@
             android:padding="10dp"/>
 
         <TextView
+            android:id="@+id/lect_attendance"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:textSize="17sp"
             android:padding="10dp"
-            android:textAlignment="viewEnd"
-            android:text="Attendance:- Pending "/>
+            android:textAlignment="viewEnd"/>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
