--- a/teacher/src/main/res/layout/bottom_sheet_lecture_create.xml
+++ b/teacher/src/main/res/layout/bottom_sheet_lecture_create.xml
@@ -12,6 +12,13 @@
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
     android:layout_margin="10dp">
 
+    <Spinner
+        android:id="@+id/classroom_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:prompt="@string/classroom"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
