--- a/student/src/main/res/layout/list_item_course.xml
+++ b/student/src/main/res/layout/list_item_course.xml
@@ -19,6 +19,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center"
+            android:visibility="gone"
             android:textAppearance="?attr/textAppearanceListItem" />
 
         <LinearLayout
