--- a/teacher/src/main/res/layout/activity_lecture_detail.xml
+++ b/teacher/src/main/res/layout/activity_lecture_detail.xml
@@ -8,11 +8,13 @@
     <include layout="@layout/activity_student_list"/>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/takeAttendanceButtonCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:cardElevation="2dp"
-        android:layout_margin="2dp">
+        android:layout_margin="2dp"
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
