--- a/student/src/main/res/layout/activity_course_detail.xml
+++ b/student/src/main/res/layout/activity_course_detail.xml
@@ -68,8 +68,10 @@
                 android:background="#ececec" />
 
             <android.support.v7.widget.CardView
+                android:id="@+id/stats_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 app:cardUseCompatPadding="true">
 
                 <LinearLayout
