--- a/student/src/main/res/values/styles.xml
+++ b/student/src/main/res/values/styles.xml
@@ -5,8 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:navigationBarColor">@color/colorSystemBarsLight</item>
+        <item name="colorAccent">@color/colorAccentDark</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="AppTheme">
@@ -23,7 +22,7 @@
     <style name="AppTheme.Intro" parent="Theme.Intro">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorAccentDark</item>
     </style>
 
 </resources>
