--- a/teacher/src/main/res/layout/activity_course_detail.xml
+++ b/teacher/src/main/res/layout/activity_course_detail.xml
@@ -74,11 +74,9 @@
 
                 <!--If enrollment is going on -->
                 <android.support.v7.widget.CardView
-                    android:id="@+id/enrollment_on_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
-                    android:visibility="gone"
                     app:cardElevation="2dp">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -86,6 +84,7 @@
                         android:layout_margin="10dp"
                         android:orientation="vertical">
                         <TextView
+                            android:id="@+id/enrollment_textview"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/enrollment_on_text"
